--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ font-family: "Montserrat", sans-serif;
 .hero{
   height:100vh;
   width:100%;
-  background:#edf2fc;
+  background:var(--primary-color);
   font-family:sans-serif;
   position:relative;
 
@@ -35,7 +35,7 @@ nav ul li{
   }
 nav ul li a{
     text-decoration:none;
-    color:#606163
+    color:  var(--secondary-color);
   }
 nav ul li a:hover{
 color: #d8a41f;
@@ -46,7 +46,7 @@ color: #d8a41f;
 }
 .info h1{
   font-size:70px;
-  color:#212121;
+  color:var( --secondary-color);
   margin-bottom:20px;
 }
 .logo{
@@ -56,13 +56,13 @@ span{
  color:#d98a14;
 }
 .info p{
-color:#606163;
+color:var(--secondary-color);
 line-height:22px;
 }
 .info a{
-  background:#212121;
+  background:var(--secondary-color);
   padding:10px 18px;
-  color:#ffff;
+  color:var( --primary-color);
   text-decoration:none;
   display:inline-block;
   border-radius:5px;
@@ -95,9 +95,28 @@ line-height:22px;
 }
 .social-links a{
   font-size:30px;
-  color:#606163;
+  color:var(--secondary-color);
   margin-left:20px;
 }
 .social-links a:hover{
   color:#d8a41f;
+}
+#icon{
+  width:25px;
+  height:25px;
+  cursor:pointer;
+}
+nav ul{
+  /* display:flex; */
+  flex:1;
+  text-align: right;
+}
+/* for the dark mode */
+:root{
+  --primary-color:#edf2fc;
+  --secondary-color:#212121;
+}
+.dark-theme{
+  --primary-color:#000106;
+  --secondary-color:#fff;
 }
